--- a/pa_mobile/pubspec.yaml
+++ b/pa_mobile/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^6.1.0
   provider: ^ 6.0.5
   shared_preferences: ^2.2.2
+  introduction_screen: ^3.1.12
+
 
 dev_dependencies:
   flutter_lints: ^2.0.0
