--- a/pa_mobile/pubspec.yaml
+++ b/pa_mobile/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^4.14.0
   firebase_core: ^2.22.0
   firebase_storage: ^11.5.1
+  image_picker: ^1.0.4
   flutter:
     sdk: flutter
   google_fonts: ^6.1.0
