--- a/pa_mobile/pubspec.yaml
+++ b/pa_mobile/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   introduction_screen: ^3.1.12
   provider: ^ 6.0.5
   shared_preferences: ^2.2.2
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_lints: ^2.0.0
